@@ -1,3 +1,10 @@
+2007-04-16  Diego Escalante Urrelo  <diegoe@gnome.org>
+
+	* src/ephy-go-action.c:
+
+	Middle clicking the Go button should open the location bar address
+	content in a new tab. Bug #362591.
+
 2007-04-09  Christian Persch  <chpe@gnome.org>
 
 	* data/glade/print.glade:
